# qoi_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/benchmark/: Cargo.toml  build.rs
examples/benchmark/src/: main.rs  qoi.c
src/: consts.rs  decode.rs  encode.rs  error.rs  lib.rs  pixel.rs
