[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rayon = "1.5.1"
qoi = { path = "../.." }
libc = "0.2.108"

[build-dependencies]
cc = "1.0.72"
git2 = "0.13.24"
tar = "0.4.37"
downloader = "0.2.6"
